[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Modifier Cards/Card_Container.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/chain.png" type="Texture" id=2]
[ext_resource path="res://UI/Modifier Cards/Linked_Cards.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 1, 0.235294, 0.156863, 0.807843 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Linked Cards" type="VBoxContainer"]
anchor_right = 0.322
anchor_bottom = 1.0
margin_right = 0.271973
rect_pivot_offset = Vector2( 165, 300 )
mouse_filter = 0
size_flags_horizontal = 6
size_flags_vertical = 7
custom_constants/separation = -1
alignment = 2
script = ExtResource( 3 )

[node name="Card_Top" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 330.0
margin_bottom = 230.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Control" type="HBoxContainer" parent="."]
show_behind_parent = true
margin_top = 229.0
margin_right = 330.0
margin_bottom = 371.0
rect_min_size = Vector2( 330, 0 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
custom_constants/separation = 32
alignment = 1

[node name="Spacer_Left" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 23.0
margin_bottom = 142.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.36
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Chain_Left" type="TextureRect" parent="Control"]
margin_left = 55.0
margin_right = 121.0
margin_bottom = 142.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
flip_h = true

[node name="Spacer_Middle" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 153.0
margin_right = 176.0
margin_bottom = 142.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.36
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Chain_Right" type="TextureRect" parent="Control"]
margin_left = 208.0
margin_right = 274.0
margin_bottom = 142.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Spacer_Right" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 306.0
margin_right = 330.0
margin_bottom = 142.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.36
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Card_Bottom" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 370.0
margin_right = 330.0
margin_bottom = 600.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Unpause_Timer" type="Timer" parent="."]

[connection signal="gui_input" from="." to="." method="_on_Linked_Cards_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Linked_Cards_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Linked_Cards_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
